chore: update java and dependencies