@@ -1,9 +1,19 @@
-FROM eclipse-temurin:17-jre-alpine
+FROM eclipse-temurin:21-jre-alpine
+
+ARG USER=default
+ENV HOME=/home/$USER
 
 ENV TZ=Europe/Oslo
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
-VOLUME /tmp
-ADD /target/records-of-processing-activities.jar app.jar
+# install sudo as root
+RUN apk add --update sudo
+RUN adduser -D $USER \
+        && echo "$USER ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/$USER \
+        && chmod 0440 /etc/sudoers.d/$USER
 
-CMD java -jar $JAVA_OPTS app.jar
+USER $USER
+WORKDIR $HOME
+
+COPY --chown=app:app /target/app.jar app.jar
+CMD ["sh", "-c", "java -jar -XX:+UseZGC $JAVA_OPTS app.jar"]
